Custom curated list of URLs + the code to populate the DB with them

--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -1,25 +1,23 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Bad key \"axes.color_cycle\" on line 29 in\n",
-      "/Users/chuklin/.matplotlib/matplotlibrc.\n",
-      "You probably need to get an updated matplotlibrc file from\n",
-      "http://github.com/matplotlib/matplotlib/blob/master/matplotlibrc.template\n",
-      "or from the matplotlib source distribution\n"
-     ]
-    }
-   ],
+   "source": [
+    "## Play w/ the Fake News dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import json\n",
+    "import subprocess\n",
+    "import sys\n",
+    "import time\n",
+    "\n",
     "import pandas as pd\n",
     "import sklearn\n",
     "import seaborn as sns\n",
@@ -170,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -226,6 +226,303 @@
     "#     print('-' * 80)\n",
     "#     print('{}\\n{}\\n{}'.format(doc_contents[a][:300], '-' * 80, doc_contents[b][:300]))\n",
     "    print('=' * 80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sending some requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Success!\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    73    0     0  100    73      0     60  0:00:01  0:00:01 --:--:--    60\r",
+      "100    84  100    11  100    73      8     58  0:00:01  0:00:01 --:--:--    58\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "curl http://localhost:8000/vote -d \"url=https://www.bbc.com/news/world-us-canada-45517260\" -d \"user=u2\" -d \"ranking=2.0\" -X PUT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.8607050180435181, \"{\\\"url\\\": \\\"https://www.bbc.com/news/world-us-canada-45517260\\\", \\\"content\\\": \\\"deadly of a storm ravages playback is unsupported on your captiongusts the impact of the people have been killed as florence mauls the us east knocking out power for hundreds of thousands of homes and downing weather event has been downgraded from a hurricane to a tropical storm but forecasters s...\\\"}\"]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    53    0     0  100    53      0    258 --:--:-- --:--:-- --:--:--   257\r",
+      "100    53    0     0  100    53      0     45  0:00:01  0:00:01 --:--:--    45\r",
+      "100   463  100   410  100    53    354     45  0:00:01  0:00:01 --:--:--   354\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "curl http://localhost:8000/storage -d \"url=https://www.bbc.com/news/world-us-canada-45532679\" -X PUT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.8081446290016174, \"{\\\"url\\\": \\\"https://www.bbc.com/news/world-us-canada-45532679?intlink_from_url=&link_location=live-reporting-story\\\", \\\"content\\\": \\\"hurricane florence strikes the eastern guide to the deadliest are violent storms that can bring devastation to coastal threatening homes and develop from fuelled by moist air as they cross air rises into the swirls in to fill the low pressure in the sucking air in and reinforcing the low storm ro...\\\"}\"], [0.7855542898178101, \"{\\\"url\\\": \\\"https://www.bbc.com/news/world-us-canada-45517260\\\", \\\"content\\\": \\\"deadly of a storm ravages playback is unsupported on your captiongusts the impact of the people have been killed as florence mauls the us east knocking out power for hundreds of thousands of homes and downing weather event has been downgraded from a hurricane to a tropical storm but forecasters s...\\\"}\"]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    72    0     0  100    72      0     59  0:00:01  0:00:01 --:--:--    59\r",
+      "100   944  100   872  100    72    685     56  0:00:01  0:00:01 --:--:--   685\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "curl http://localhost:8000/storage -d \"url=https://docs.scipy.org/doc/numpy/reference/generated/numpy.mean.html\" -X PUT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Success!\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    92    0     0  100    92      0     75  0:00:01  0:00:01 --:--:--    75\r",
+      "100   103  100    11  100    92      8     68  0:00:01  0:00:01 --:--:--    68\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "curl http://localhost:8000/vote -d \"url=https://docs.scipy.org/doc/numpy/reference/generated/numpy.mean.html\" -d \"user=u2\" -d \"ranking=2.0\" -X PUT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.8590534329414368, \"{\\\"url\\\": \\\"https://docs.scipy.org/doc/numpy/reference/generated/numpy.mean.html\\\", \\\"content\\\": \\\"numpy the arithmetic mean along the specified the average of the array the average is taken over the flattened array by otherwise over the specified intermediate and return values are used for integer containing numbers whose mean is if is not an a conversion is none or int or tuple of or axes al...\\\"}\"], [0.7817232608795166, \"{\\\"url\\\": \\\"https://www.bbc.com/news/world-us-canada-45532679?intlink_from_url=&link_location=live-reporting-story\\\", \\\"content\\\": \\\"hurricane florence strikes the eastern guide to the deadliest are violent storms that can bring devastation to coastal threatening homes and develop from fuelled by moist air as they cross air rises into the swirls in to fill the low pressure in the sucking air in and reinforcing the low storm ro...\\\"}\"], [0.73563152551651, \"{\\\"url\\\": \\\"https://www.bbc.com/news/world-us-canada-45517260\\\", \\\"content\\\": \\\"deadly of a storm ravages playback is unsupported on your captiongusts the impact of the people have been killed as florence mauls the us east knocking out power for hundreds of thousands of homes and downing weather event has been downgraded from a hurricane to a tropical storm but forecasters s...\\\"}\"]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    68    0     0  100    68      0    314 --:--:-- --:--:-- --:--:--   314\r",
+      "100    68    0     0  100    68      0     55  0:00:01  0:00:01 --:--:--    55\r",
+      "100    68    0     0  100    68      0     30  0:00:02  0:00:02 --:--:--    30\r",
+      "100  1366  100  1298  100    68    560     29  0:00:02  0:00:02 --:--:--   560\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%sh\n",
+    "curl http://localhost:8000/storage -d \"url=https://ipython.readthedocs.io/en/stable/interactive/magics.html\" -X PUT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Play w/ the custom dataset by Sergey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.coindesk.com/circle-survey-finds-twice-as-many-men-invest-in-cryptocurrencies-as-women/\n",
+      "https://www.coindesk.com/brave-launches-legal-offensive-on-google-ads-data-collection-practices/\n",
+      "https://www.coindesk.com/ethereums-constantinople-hard-fork-to-activate-on-testnet-in-october/\n",
+      "https://www.coindesk.com/ether-records-highest-daily-trading-volume-in-12-months/\n",
+      "https://www.ccn.com/bmw-partners-blockchain-startup-to-develop-customer-lending-solution/\n",
+      "https://www.ccn.com/mastercard-thinks-blockchain-can-simplify-b2b-transactions-in-new-patent/https://www.ccn.com/medici-ventures-latest-blockchain-investment-bridges-fiat-with-crypto/\n",
+      "https://www.ccn.com/nerdy-australian-pm-pushes-blockchain-agenda-to-take-on-big-banks/\n",
+      "https://www.ccn.com/blockchain-could-bring-1-1-trillion-in-new-global-trade-says-wef/\n",
+      "https://www.ccn.com/ubers-largest-shareholder-prototypes-a-blockchain-for-mobile-cross-carrier-payments/\n",
+      "https://www.ccn.com/bitcoin-industry-launches-d-c-lobbying-group-to-promote-crypto/\n",
+      "https://cointelegraph.com/news/korea-customs-service-partners-with-samsung-sds-to-build-blockchain-customs-platform\n",
+      "https://cointelegraph.com/news/platform-allows-content-creators-to-sell-footage-to-news-media-via-blockchain-auction\n",
+      "https://cointelegraph.com/news/blockchains-popularity-among-large-enterprises-soared-11-this-year-survey-finds\n",
+      "https://www.blockchaintechnology-news.com/2018/09/07/blockchain-and-identity-five-predictions-and-how-they-fared/\n",
+      "https://www.blockchaintechnology-news.com/2018/08/29/the-case-for-blockchain-powered-reward-schemes/\n",
+      "https://www.blockchaintechnology-news.com/2018/08/22/eos-may-be-the-first-ever-governed-but-is-it-truly-a-blockchain/\n",
+      "https://www.blockchaintechnology-news.com/2018/08/15/how-blockchain-technologies-can-take-the-wastage-out-of-the-retail-economy/\n",
+      "https://www.nytimes.com/2018/09/15/us/hurricane-florence-path.html\n",
+      "https://nordic.businessinsider.com/hurricane-florence-brings-winds-risk-of-floods-to-us-east-coast-2018-9?r=US&IR=T\n",
+      "https://www.nytimes.com/2018/09/14/us/hurricane-florence-track.html\n",
+      "https://www.theguardian.com/world/live/2018/sep/13/florence-hurricane-latest-live-news-updates-weather-path-storm-surge-north-carolina\n",
+      "https://www.independent.co.uk/news/world/americas/hurricane-florence-live-update-tracker-path-updates-latest-death-nc-sc-weather-trump-today-category-a8538466.html\n",
+      "https://www.livescience.com/63530-hurricane-florence-forecast.html\n",
+      "https://www.bbc.com/news/av/world-us-canada-45487105/hurricane-florence-seen-from-space\n",
+      "https://www.accuweather.com/en/weather-news/reports-5-dead-power-outages-approaching-1-million-as-florence-unleashes-record-flooding-across-the-carolinas/70006066\n",
+      "https://www.cbsnews.com/live-news/tropical-storm-florence-hurricane-latest-weather-forecast-path-flood-zone-warnings-live-updates/\n",
+      "https://6abc.com/weather/5-dead-as-florence-hits-the-carolinas/4200733/\n",
+      "https://www.washingtonpost.com/news/post-nation/wp/2018/09/15/hurricane-florence-storm-continues-to-pummel-carolinas/?utm_term=.90af4ce05d08\n",
+      "https://edition.cnn.com/2018/09/11/us/why-hurricane-florence-is-so-dangerous/index.html\n",
+      "https://www.bbc.co.uk/news/uk-politics-45526187\n",
+      "https://www.bbc.co.uk/news/uk-45525976\n",
+      "https://www.bbc.co.uk/news/uk-politics-45519676\n",
+      "https://www.bbc.co.uk/news/uk-politics-45519604\n",
+      "https://www.bbc.co.uk/news/uk-wales-politics-45512635\n",
+      "https://www.bbc.co.uk/news/uk-politics-45517094\n",
+      "https://edition.cnn.com/2018/09/14/politics/greg-craig-foreign-agent-registration-investigation/index.html\n",
+      "https://edition.cnn.com/2018/09/14/politics/paul-manafort-guilty-plea/index.html\n",
+      "https://edition.cnn.com/2018/09/14/politics/paul-manafort-plea/index.html\n",
+      "https://edition.cnn.com/2018/09/14/politics/kavanaugh-letter-assault-supreme-court/index.html\n",
+      "https://edition.cnn.com/2018/09/13/politics/mcraven-pentagon-advisory-board-trump/index.html\n",
+      "https://edition.cnn.com/2018/09/13/politics/new-york-democratic-primaries-progressives-establishment/index.html\n",
+      "https://edition.cnn.com/2018/09/13/politics/donald-trump-puerto-rico-hill-republicans-tweets/index.html\n",
+      "https://www.theguardian.com/politics/2018/sep/14/eu-officials-refute-raab-claim-that-brexit-talks-are-closing-in-on-deal\n",
+      "https://www.theguardian.com/politics/2018/sep/15/tim-farron-hijacked-lib-dems-with-his-beliefs-book-claims\n",
+      "https://www.theguardian.com/politics/2018/sep/15/ex-cbi-chief-paul-drechsler-lambasts-eu-leaders-and-uk-over-citizens-rights\n",
+      "https://www.theguardian.com/politics/2018/sep/15/john-mcdonnell-financial-crisis-big-banks-must-never-again-be-master-of-the-economy-\n",
+      "https://www.theguardian.com/politics/2018/sep/14/three-best-for-britain-members-refused-pass-to-tory-conference\n",
+      "https://www.theguardian.com/society/2018/sep/14/thousands-of-prison-officers-to-protest-over-unprecedented-violence\n",
+      "https://www.bbc.com/news/business-45493147?intlink_from_url=https://www.bbc.com/news/topics/cywd23g0qnmt/china-economy&link_location=live-reporting-correspondent\n",
+      "https://www.bbc.com/news/business-45451809?intlink_from_url=https://www.bbc.com/news/topics/cywd23g0qnmt/china-economy&link_location=live-reporting-story\n",
+      "https://www.bbc.com/news/business-45443004?intlink_from_url=https://www.bbc.com/news/topics/cywd23g0qnmt/china-economy&link_location=live-reporting-story\n",
+      "https://www.bbc.com/news/world-asia-china-45412461?intlink_from_url=https://www.bbc.com/news/topics/cywd23g0qnmt/china-economy&link_location=live-reporting-story\n",
+      "https://www.bbc.com/news/business-45294162?intlink_from_url=https://www.bbc.com/news/topics/cywd23g0qnmt/china-economy&link_location=live-reporting-story\n",
+      "https://www.theguardian.com/business/live/2018/aug/23/markets-nervous-amid-new-us-china-tariffs-and-trumps-troubles-business-live\n",
+      "https://www.theguardian.com/business/2018/aug/16/china-to-send-delegation-for-us-talks-to-avert-trade-war\n",
+      "https://www.theguardian.com/technology/2018/may/28/digital-wallet-of-ant-financial-captivates-china-and-beyond\n",
+      "https://www.theguardian.com/business/2018/may/02/house-of-fraser-to-close-stores-restructuring-deal-jobs-at-risk-chinese-firm-cbanner\n",
+      "https://www.bbc.com/news/business-45516678\n",
+      "https://www.bbc.com/news/business-45508570\n",
+      "https://www.bbc.com/news/business-45508563\n",
+      "https://www.bbc.com/news/business-45504521\n",
+      "https://www.bbc.com/news/world-europe-45508672\n",
+      "https://www.cnbc.com/2018/09/14/trump-wants-tariffs-on-200-billion-of-goods-from-china.html\n",
+      "https://www.cnbc.com/2018/09/14/us-retail-sales-august-2018.html\n",
+      "https://www.cnbc.com/2018/09/13/us-cpi-aug-2018.html\n",
+      "https://www.theguardian.com/politics/2018/sep/15/john-mcdonnell-financial-crisis-big-banks-must-never-again-be-master-of-the-economy-\n",
+      "https://www.theguardian.com/commentisfree/2018/sep/14/the-guardian-view-on-the-great-financial-crash-new-thinking-needed\n",
+      "https://www.theguardian.com/business/2018/sep/14/how-gordon-brown-contributed-to-tory-austerity-policy\n",
+      "https://www.theguardian.com/business/2018/sep/13/bank-holds-on-interest-rates-with-a-warning-over-a-no-deal-brexit\n",
+      "https://www.theguardian.com/politics/blog/live/2018/sep/13/brexit-no-deal-planning-papes-dominic-raab-takes-swipe-at-john-lewis-saying-firms-should-not-blame-brexit-for-their-own-failings-politics-live\n",
+      "https://www.theguardian.com/football/live/2018/sep/15/tottenham-hotspur-v-liverpool-premier-league-live\n",
+      "https://www.theguardian.com/sport/2018/sep/15/aphiwe-dyantyi-grabs-two-tries-as-springboks-stun-all-blacks\n",
+      "https://www.theguardian.com/sport/live/2018/sep/15/vuelta-a-espana-simon-yates-goes-for-victory-in-decisive-stage-20-live\n",
+      "https://www.theguardian.com/sport/2018/sep/14/billy-vunipola-saracens-england-rugby\n",
+      "https://www.skysports.com/football/news/11671/11498341/everton-boss-marco-silva-frustrated-by-injuries-and-suspensions\n",
+      "https://www.skysports.com/f1/news/12433/11491794/singapore-gp-practice-three-sebastian-vettel-shatters-lap-record-in-ferrari-one-two\n",
+      "https://www.skysports.com/wwe/news/14203/11497203/wwe-make-your-hell-in-a-cell-predictions-ahead-of-sunday-nights-event\n",
+      "https://www.skysports.com/boxing/news/12183/11498316/josh-warrington-to-defend-world-title-against-carl-frampton\n",
+      "http://www.euronews.com/2018/09/10/sexism-in-tennis-debate-flares-up-after-williams-lambasts-umpire\n"
+     ]
+    }
+   ],
+   "source": [
+    "urls = []\n",
+    "group = None\n",
+    "with open('./testdata/news_urls.txt') as f:\n",
+    "    for line in f:\n",
+    "        if line.startswith('http'):\n",
+    "            url = line.rstrip()\n",
+    "            urls.append((group, url))\n",
+    "            print(url)\n",
+    "            command = 'curl http://localhost:8000/vote -d \"url={}\" -d \"user=u2\" -d \"ranking=2.0\" -X PUT'.format(url)\n",
+    "            subprocess.call(command, shell=True)\n",
+    "            time.sleep(1)\n",
+    "        else:\n",
+    "            group = line.rstrip()\n",
+    "            print(group)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url_to_group = {url: group for group, url in urls}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for group, url in urls:\n",
+    "    command = 'curl http://localhost:8000/storage -d \"url={}\" -X PUT'.format(url)\n",
+    "    print(group, command)\n",
+    "    out=subprocess.run(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
+    "    print(out.stdout)"
    ]
   },
   {
