Optimization: do not re-fetch the doc if it is already stored in the DB

--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,40 @@
       "https://www.skysports.com/f1/news/12433/11491794/singapore-gp-practice-three-sebastian-vettel-shatters-lap-record-in-ferrari-one-two\n",
       "https://www.skysports.com/wwe/news/14203/11497203/wwe-make-your-hell-in-a-cell-predictions-ahead-of-sunday-nights-event\n",
       "https://www.skysports.com/boxing/news/12183/11498316/josh-warrington-to-defend-world-title-against-carl-frampton\n",
-      "http://www.euronews.com/2018/09/10/sexism-in-tennis-debate-flares-up-after-williams-lambasts-umpire\n"
+      "http://www.euronews.com/2018/09/10/sexism-in-tennis-debate-flares-up-after-williams-lambasts-umpire\n",
+      "http://www.euronews.com/2018/09/14/marwan-zgheib-speaks-of-a-crisis-in-global-architecture\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://www.euronews.com/2018/09/08/hungary-s-night-of-football\n",
+      "http://www.euronews.com/2018/09/05/nike-partnership-with-colin-kaepernick-divides-the-united-states\n",
+      "http://www.euronews.com/2018/09/04/denmark-calls-up-second-string-players-amid-dispute-with-star-players\n",
+      "https://www.thesun.co.uk/sport/boxing/7265592/floyd-mayweather-sensationally-announces-plan-to-fight-manny-pacquiao-this-year/\n",
+      "https://www.thesun.co.uk/sport/football/7240461/tottenham-vs-liverpool-live-score-premier-league/\n",
+      "https://www.thesun.co.uk/sport/football/7264984/newcastle-united-cardiff-city-cryptocurrencies/\n",
+      "https://www.thesun.co.uk/sport/rugbyleague/7265242/rugby-match-streaker-pitch-headstand-socks/\n",
+      "https://www.thesun.co.uk/sport/rugbyleague/7263371/sam-burgess-sexting-australia-south-sydney-rabbitohs/\n",
+      "http://www.livingit.euronews.com/2018/09/13/a-fashion-illustration-renaissance\n",
+      "http://www.euronews.com/2018/09/10/using-science-to-repair-the-cracks-in-stone-walls\n",
+      "http://www.euronews.com/2018/09/11/rencontres-d-arles-what-not-to-miss-at-one-europe-s-biggest-photography-events\n",
+      "http://www.euronews.com/2018/09/07/rapper-mac-miller-found-dead-california-home-n907631\n",
+      "http://www.euronews.com/2018/09/07/oscars-delays-introduction-controversial-popular-film-category-n907196\n",
+      "http://www.euronews.com/2018/09/06/burt-reynolds-charismatic-star-1970s-blockbusters-dies-82-n907206\n",
+      "https://www.wired.co.uk/article/open-house-london-2018\n",
+      "https://www.wired.co.uk/article/best-films-on-netflix-uk\n",
+      "https://www.wired.co.uk/article/best-amazon-prime-films-uk-movies-list-free\n",
+      "https://www.livescience.com/50717-amazing-images.html\n",
+      "https://www.newyorker.com/magazine/2018/09/24/the-sisters-brothers-is-not-your-average-western\n",
+      "https://edition.cnn.com/2018/09/14/us/hurricane-florence-south-east-coast-wxc/index.html\n",
+      "https://www.nytimes.com/2018/09/14/us/hurricane-florence-track.html\n",
+      "https://eu.usatoday.com/story/news/2018/09/14/hurricane-florence-path-storm-carolina-coast-landfall/1300176002/https://www.washingtonpost.com/news/post-nation/wp/2018/09/14/hurricane-florence-sweeps-across-carolinas-bringing-life-threatening-rainfall/?utm_term=.dbeefd257156\n",
+      "https://www.telegraph.co.uk/news/2018/09/14/hurricane-florence-batters-us-east-coast-whole-communities-could/\n",
+      "https://abcnews.go.com/US/hurricane-florence-pummels-north-carolina-coast-flooded-bern/story?id=57818455\n",
+      "https://www.haaretz.com/us-news/first-deaths-confirmed-as-hurricane-florence-hits-north-carolina-1.6471327\n",
+      "https://globalnews.ca/news/4451823/florence-tropical-storm-4-killed/\n"
      ]
     }
    ],
@@ -505,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,15 +547,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blockchain: https://cointelegraph.com/news/korea-customs-service-partners-with-samsung-sds-to-build-blockchain-customs-platform\n",
+      "{'message': 'Internal Server Error'}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'slice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-1aca8d5c6232>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mresult_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0msim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresult_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'url'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msim\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misnan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msim\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'slice'"
+     ]
+    }
+   ],
    "source": [
-    "for group, url in urls:\n",
+    "for group, url in urls[10:20]:\n",
     "    command = 'curl http://localhost:8000/storage -d \"url={}\" -X PUT'.format(url)\n",
-    "    print(group, command)\n",
+    "    print(group, url)\n",
     "    out=subprocess.run(command, shell=True, stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
-    "    print(out.stdout)"
+    "    result_list = json.loads(out.stdout.decode('utf-8'))\n",
+    "    print(result_list)\n",
+    "    for sim, doc in result_list[:3]:\n",
+    "        url = json.loads(doc)['url']\n",
+    "        if sim is not None and not np.isnan(sim):\n",
+    "            print(sim, url_to_group.get(url), url)\n",
+    "    print()"
    ]
   },
   {
