Run the script to populate the DB

--- a/Sandbox.ipynb
+++ b/Sandbox.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -265,25 +265,25 @@
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\r",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
-      "100    82  100    11  100    71    697   4504 --:--:-- --:--:-- --:--:--  4733\n"
+      "100    82  100    11  100    71    243   1573 --:--:-- --:--:-- --:--:--  1577\n"
      ]
     }
    ],
    "source": [
     "%%sh\n",
-    "curl http://localhost:8000/vote -d \"url=https://www.bbc.com/news/world-us-canada-45517260\" -d \"user=70\" -d \"ranking=1\" -X PUT"
+    "curl http://localhost:8000/vote -d \"url=https://www.bbc.com/news/world-us-canada-45517260\" -d \"user=27\" -d \"ranking=1\" -X PUT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"result\": \"Your friends believe this is truth\", \"doc\": [{\"url\": \"https://www.bbc.com/news/world-us-canada-45517260\", \"content\": \"The weather event has been downgraded from a hurricane to a tropical storm but forecasters still warn of life-threatening storm surges.\\nThe storm originally made landfall at Wrightsville Beach, North Carolina, on Friday morning as a category one hurricane.\\nSome parts of North Carolina have already seen surges as high as 10ft in places.\\nIn Jacksonville, North Carolina, officials had rescued more than 60 people overnight from a hotel that was collapsing in the storm.\\nParts of New Bern, North Carolina, which is home to 30,000 people, were 10ft underwater on Friday.\", \"status\": \"real\", \"friends\": [2, 70]}, {\"url\": \"https://www.livescience.com/63530-hurricane-florence-forecast.html\", \"content\": \"Hurricane Florence approaches the U.S. Southeast Coast, where it is expected to make landfall on the border between North and South Carolina this morning (Sept. 14), according to NOAA.\\nThe center of the eye of Hurricane Florence, packing sustained winds of up to 90 mph (150 km/h), just made landfall near Wrightsville, North Carolina, at around 7:30 a.m.\\nET today (Sept. 13), the eye of Hurricane Florence was churning about 100 miles (160 km) east-southeast of Wilmington, North Carlina, the NHC reported.\\nThe governors of Virginia, North Carolina and South Carolina have declared states of emergency, according to CNN.\\n\\\"We are preparing for the worst, and of course hoping for the best,\\\" South Carolina Gov.\", \"status\": \"real\", \"friends\": [2]}]}\n"
+      "{\"result\": \"Your friends believe this is truth\", \"doc\": [{\"url\": \"https://www.bbc.com/news/world-us-canada-45517260\", \"content\": \"The weather event has been downgraded from a hurricane to a tropical storm but forecasters still warn of life-threatening storm surges.\\nThe storm originally made landfall at Wrightsville Beach, North Carolina, on Friday morning as a category one hurricane.\\nSome parts of North Carolina have already seen surges as high as 10ft in places.\\nIn Jacksonville, North Carolina, officials had rescued more than 60 people overnight from a hotel that was collapsing in the storm.\\nParts of New Bern, North Carolina, which is home to 30,000 people, were 10ft underwater on Friday.\", \"status\": \"real\", \"friends\": [\"Maria Lobanova\", \"Diana Gerasimova\"]}]}\n"
      ]
     },
     {
@@ -294,14 +294,13 @@
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
       "\r",
       "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
-      "100    60    0     0  100    60      0   1317 --:--:-- --:--:-- --:--:--  1304\r",
-      "100  1649  100  1589  100    60  34720   1311 --:--:-- --:--:-- --:--:-- 34543\n"
+      "100   836  100   776  100    60  33783   2612 --:--:-- --:--:-- --:--:-- 35272\n"
      ]
     }
    ],
    "source": [
     "%%sh\n",
-    "curl http://localhost:8000/ranked -d \"url=https://www.bbc.com/news/world-us-canada-45532679\" -d \"user=2\" -X PUT "
+    "curl http://localhost:8000/ranked -d \"url=https://www.bbc.com/news/world-us-canada-45532679\" -d \"user=0\" -X PUT "
    ]
   },
   {
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 289,
    "metadata": {
     "scrolled": false
    },
@@ -412,30 +411,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': 2,\n",
-       " 'secondName': 'Zaitseva',\n",
-       " 'name': 'Claudia',\n",
-       " 'friendsIdList': [70, 27, 10, 29, 21, 38, 47, 81]}"
+       "{('Alan', '48'),\n",
+       " ('Alexander', '41'),\n",
+       " ('Alexey', '33'),\n",
+       " ('Andrei', '19'),\n",
+       " ('Andrei', '62'),\n",
+       " ('Andrei', '71'),\n",
+       " ('Anton', '63'),\n",
+       " ('Anton', '8'),\n",
+       " ('Arsen', '24'),\n",
+       " ('Arsen', '29'),\n",
+       " ('Arsen', '42'),\n",
+       " ('Arsen', '90'),\n",
+       " ('Arseny', '84'),\n",
+       " ('Bogdan', '54'),\n",
+       " ('Boris', '4'),\n",
+       " ('Camilla', '23'),\n",
+       " ('Camilla', '34'),\n",
+       " ('Caroline', '20'),\n",
+       " ('Christina', '28'),\n",
+       " ('Claudia', '2'),\n",
+       " ('Claudia', '7'),\n",
+       " ('Claudia', '94'),\n",
+       " ('Cyrus', '12'),\n",
+       " ('Cyrus', '51'),\n",
+       " ('Daria', '64'),\n",
+       " ('Diana', '27'),\n",
+       " ('Dina', '73'),\n",
+       " ('Elena', '50'),\n",
+       " ('Elena', '72'),\n",
+       " ('Elizabeth', '16'),\n",
+       " ('Elizabeth', '96'),\n",
+       " ('Eugene', '37'),\n",
+       " ('Eugene', '59'),\n",
+       " ('Eugene', '78'),\n",
+       " ('Eugene', '79'),\n",
+       " ('Eugene', '92'),\n",
+       " ('Eve', '39'),\n",
+       " ('Eve', '5'),\n",
+       " ('Galina', '1'),\n",
+       " ('Gennady', '40'),\n",
+       " ('Gennady', '82'),\n",
+       " ('Hope', '98'),\n",
+       " ('Ilona', '38'),\n",
+       " ('Inna', '89'),\n",
+       " ('Irina', '56'),\n",
+       " ('Konstantin', '86'),\n",
+       " ('Ksenia', '70'),\n",
+       " ('Ksenia', '81'),\n",
+       " ('Ksenia', '9'),\n",
+       " ('Larissa', '15'),\n",
+       " ('Larissa', '47'),\n",
+       " ('Leah', '45'),\n",
+       " ('Leila', '93'),\n",
+       " ('Liana', '61'),\n",
+       " ('Lina', '18'),\n",
+       " ('Love', '17'),\n",
+       " ('Lyudmila', '49'),\n",
+       " ('Lyudmila', '88'),\n",
+       " ('Lyudmila', '91'),\n",
+       " ('Maksim', '66'),\n",
+       " ('Margarita', '44'),\n",
+       " ('Maria', '0'),\n",
+       " ('Maria', '43'),\n",
+       " ('Marseilles', '55'),\n",
+       " ('Marseilles', '95'),\n",
+       " ('Matvey', '77'),\n",
+       " ('Melania', '22'),\n",
+       " ('Melania', '30'),\n",
+       " ('Michael', '10'),\n",
+       " ('Mila', '26'),\n",
+       " ('Milan', '60'),\n",
+       " ('Milan', '99'),\n",
+       " ('Miroslav', '75'),\n",
+       " ('Myron', '32'),\n",
+       " ('Nazar', '35'),\n",
+       " ('Nazar', '57'),\n",
+       " ('Nikita', '21'),\n",
+       " ('Nikita', '3'),\n",
+       " ('Nikita', '67'),\n",
+       " ('Nikolai', '14'),\n",
+       " ('Nikolai', '87'),\n",
+       " ('Nikolai', '97'),\n",
+       " ('Oleg', '58'),\n",
+       " ('Paul', '6'),\n",
+       " ('Plato', '13'),\n",
+       " ('Prokhor', '85'),\n",
+       " ('Ratmir', '36'),\n",
+       " ('Ratmir', '68'),\n",
+       " ('Rinat', '31'),\n",
+       " ('Vadim', '76'),\n",
+       " ('Victor', '11'),\n",
+       " ('Vitaliy', '74'),\n",
+       " ('Vitaliy', '80'),\n",
+       " ('Vladislav', '69'),\n",
+       " ('Vsevolod', '25'),\n",
+       " ('Vsevolod', '83'),\n",
+       " ('Vyacheslav', '52'),\n",
+       " ('Yesenia', '53'),\n",
+       " ('Zarina', '65'),\n",
+       " ('a lion', '46')}"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "users['2']"
+    "{(u['name'], k) for k, u in users.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 287,
    "metadata": {
     "scrolled": false
    },
